update team image endpoint
